font size overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,7 +124,8 @@ display: none;
     width:40vw
   }
   .month-title{
-    padding-left: .25em !important;
+    padding-left: .5em !important;
+    font-size:1.5em !important
   }
   li{
     font-size: 1.2em !important;
